# morskoyboy

./: README.md
docker/: dockerfile  myapp.cpp
qt-battleship-master/: CMakeLists.txt  QtAddStaticLibs.cmake  QtCopySharedLibs.cmake  QtDir.cmake
qt-battleship-master/Sources/Client/: CMakeLists.txt  GameField.cpp  GameField.h  GameStartWindow.cpp  GameStartWindow.h  GameStartWindow.ui  GameWindow.cpp  GameWindow.h  Main.cpp  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui
qt-battleship-master/Sources/ClientShell/: CMakeLists.txt  Main.cpp
qt-battleship-master/Sources/NetworkApi/: BasePeer.hpp  CMakeLists.txt  GameSession.hpp  Msg.hpp  MsgGameStatus.hpp  MsgPlayerQuery.hpp  MsgPlayerResponse.hpp  MsgShotAvailable.hpp  MsgShotDetails.hpp  MsgShotResults.hpp  PlayerPeer.hpp  ServerPeer.hpp
qt-battleship-master/Sources/Server/: CMakeLists.txt  Main.cpp
